sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: type mismatch;
 found   : Unit
 required: Boolean
	for (j <- 0 to getNombreValeurs()-2) {
               ^