sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
while (
	for (j <- 0 to getNombreValeurs()-2) {
		j+1>=j
	} ) {
		for (i <- 0 to (getNombreValeurs()-2)) {
		if (plusPetit(i+1, i)) {
			echange(i, i+1) }
	}
}
}